--- a/views/appeal.jade
+++ b/views/appeal.jade
@@ -5,7 +5,7 @@ block content
 			if (user.isBlocked)
 				.open
 					.logo
-						img#logo(src='/images/ceda2.png')
+						img#logo(src='/images/ceda2.png', alt="logo")
 					if (appeal)
 						h1 Thank you
 						p We will contact you shortly about your appeal.
