--- a/views/chat.jade
+++ b/views/chat.jade
@@ -22,7 +22,7 @@ block content
 									.middle-left
 										if (history[i][4] == history[i][0])
 											.icon
-												img(src="/images/icon-block-red.png")
+												img(src="/images/icon-block-red.png", alt="user blocked")
 										p=history[i][1]
 									.middle-right
 										p #{formatDate(history[i][3])}
