--- a/views/delete.jade
+++ b/views/delete.jade
@@ -3,7 +3,7 @@ block content
 	.container
 		.open
 			.logo
-				img#logo(src='/images/ceda2.png')
+				img#logo(src='/images/ceda2.png', alt='logo')
 			h1 Are you sure you want to delete your account?
 			form.form-login#deleteUser(role='form', method='POST', action='/delete')
 				button.form-submit#delete(type="submit") Yes delete my account
