--- a/views/signup.jade
+++ b/views/signup.jade
@@ -3,7 +3,7 @@ block content
 	.container
 		.open
 			.logo
-				img#logo(src='/images/ceda2.png')
+				img#logo(src='/images/ceda2.png', alt='logo')
 			h1 Sign Up
 			if (message.length > 0)
 				.alert #{message}
