--- a/views/error.jade
+++ b/views/error.jade
@@ -11,7 +11,7 @@ block content
 				if (status === 404)
 					h2 Woops! Looks like you got a bit lost!
 				.errorImage
-					img(src="/images/error_#{status}.png")
+					img(src="/images/error_#{status}.png", alt='error image')
 				a(href="/")
 					button#retry(type="button") Go back
 				//-h2= message
