--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
 		if (!user)
 			.open
 				.logo
-					img#logo(src='/images/ceda2.png')
+					img#logo(src='/images/ceda2.png', alt='logo')
 				h1 Login
 				if (message.length > 0)
 					.alert #{message}
